8213250: CDS archive creation aborts due to metaspace object allocation failure

Reviewed-by: jiangli, ccheung